k8s/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  minReadySeconds: 60
  replicas: 1
  selector:
    matchLabels:
      app: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: registry.cn-beijing.aliyuncs.com/wdora/aidoor-app:20250722054505
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
      terminationGracePeriodSeconds: 180
